--- a/_projects/2015-01-01-TMT.md
+++ b/_projects/2015-01-01-TMT.md
@@ -9,6 +9,6 @@ Design and implementation of an Interactive game to practice typing
 
 **Programming Languages and Technologies:** C++
 
-**Member(s):** Taha Rostami
+**Member(s):** Sara Rostami
 
 **[codes and more information ( not Available)](#)**
