--- a/_projects/2017-01-03-Puzzle.md
+++ b/_projects/2017-01-03-Puzzle.md
@@ -9,5 +9,5 @@ This is a simple graphical puzzle game which I wrote for my mother who loves sol
 
 **Programming Languages and Technologies:** C#, Windows Forms Application
 
-**Member(s):** Taha Rostami
-**[codes and more information (Available)](https://github.com/TahaRostami/Toy_Projects/tree/main/Tataiee.Puzzle)**
+**Member(s):** Sara Rostami
+**[codes and more information (Available)](https://github.com/SaraRostami/Toy_Projects/tree/main/Tataiee.Puzzle)**
