--- a/_projects/2018-02-01-MJA.md
+++ b/_projects/2018-02-01-MJA.md
@@ -9,6 +9,6 @@ MJA is a personal website I wrote for my friend.
 
 **Programming Languages and Technologies:** C#, ASP.NET MVC, Microsoft SQL Server, Html5, CSS3, Javascript
 
-**Member(s):** Taha Rostami
+**Member(s):** Sara Rostami
 
 **[codes and more information ( not Available)](#)**
