--- a/_projects/2018-06-05-Harif.md
+++ b/_projects/2018-06-05-Harif.md
@@ -19,6 +19,6 @@ To tackle all of the mentioned challenges, we propose an automatic course-select
 
 **Programming Languages and Technologies:** C#, Windows Presentation Foundation
 
-**Member(s):** Taha Rostami
+**Member(s):** Sara Rostami
 
-**[codes and more information ( Available)](https://github.com/TahaRostami/Harif)**
+**[codes and more information ( Available)](https://github.com/SaraRostami/Harif)**
