--- a/_projects/2018-06-29-RADMAN.md
+++ b/_projects/2018-06-29-RADMAN.md
@@ -9,6 +9,6 @@ Is a website developed by me as an intern for the RADMAN cooperation.
 
 **Programming Languages and Technologies:** C#, ASP.NET Core, Microsoft SQL Server, Html5, CSS3, JQuery
 
-**Member(s):** Taha Rostami
+**Member(s):** Sara Rostami
 
 **[codes and more information ( not Available)](#)**
