--- a/_projects/2022-01-02-WHO.md
+++ b/_projects/2022-01-02-WHO.md
@@ -34,6 +34,6 @@ To prove that WHO hosts this data, I searched for a website named <a href="https
 
 **Programming Languages and Technologies:** Python
 
-**Member(s):** Taha Rostami
+**Member(s):** Sara Rostami
 
 **[codes and more information ( N/A)](#)**
