--- a/_projects/2022-01-03-Raichu.md
+++ b/_projects/2022-01-03-Raichu.md
@@ -1,13 +1,14 @@
 ---
 layout: post
-title: "An intelligent player for Raichu game"
+title: "Data Analysis - Fall 2022"
 ---
-I designed and implemented an intelligent player that adopt the Monte-Carlo Tree Search algorithm to play a board-game named Raichu.
+Data Analysis course presentd by [Dr. Mohammad Amin Sadeghi](https://ece.ut.ac.ir/en/~asadeghi) and [Dr. Mohammadreza Abolghasemi Dehaqani](https://ece.ut.ac.ir/en/~dehaqani) at the university of Tehran. these are the assignments and projects that I did throughout the course.
+
 
 **Application Language(s):** N/A
 
-**Programming Languages and Technologies:** Python
+**Programming Languages and Technologies:** Python, SQL, selenium
 
-**Member(s):** Taha Rostami
+**Member(s):** Sara Rostami
 
 **[codes and more information ( not Available)](#)**
