--- a/_publications/2021-12-14-ikt1.md
+++ b/_publications/2021-12-14-ikt1.md
@@ -10,7 +10,7 @@ ignored by the existing methods. Therefore, we propose a method able to handle t
 
 **Language(s):** Persian
 
-**Authors:** Taha Rostami, Saeed Jalili
+**Authors:** Sara Rostami, Saeed Jalili
 
 **Published in:** 12th International Conference on Information and Knowledge Technology
 
