--- a/_publications/2023-01-02-jp2.md
+++ b/_publications/2023-01-02-jp2.md
@@ -25,11 +25,11 @@ and mutant prioritization problems.
 
 **Language(s):** English
 
-**Authors:** Taha Rostami, Saeed Jalili
+**Authors:** Sara Rostami, Saeed Jalili
 
 **Published in:** Prepared, not submitted yet
 
-[**URL**](https://github.com/TahaRostami/MuPy3Codeforces)
+[**URL**](https://github.com/SaraRostami/MuPy3Codeforces)
 
 **Keywords:** <span class="w3-tag w3-round w3-center">Software testing</span> <span class="w3-tag w3-round w3-center">Mutation testing</span> <span class="w3-tag w3-round w3-center">Transfer learning</span> <span class="w3-tag w3-round w3-center">Pre-trained models</span>
 
