--- a/_publications/2023-01-03-jp3.md
+++ b/_publications/2023-01-03-jp3.md
@@ -10,11 +10,11 @@ Mutation testing is a powerful method used in software testing to support severa
 
 **Language(s):** English
 
-**Authors:** Taha Rostami
+**Authors:** Sara Rostami
 
 **Published in:** submitted to The Journal of Systems & Software
 
-[**URL**](https://github.com/TahaRostami/predicting-non-trivial-equivalent-mutants-of-the-MART)
+[**URL**](https://github.com/SaraRostami/predicting-non-trivial-equivalent-mutants-of-the-MART)
 
 **Keywords:** <span class="w3-tag w3-round w3-center">Software testing</span> <span class="w3-tag w3-round w3-center">Mutation testing</span> <span class="w3-tag w3-round w3-center">Equivalent mutants</span> <span class="w3-tag w3-round w3-center">Interpretability</span>
 
