--- a/_projects/2015-01-03-Abnama.md
+++ b/_projects/2015-01-03-Abnama.md
@@ -9,6 +9,6 @@ This is a product managment system that I wrote as a develpoer in Behineh System
 
 **Programming Languages and Technologies:** C#, Windows Forms Application
 
-**Member(s):** Taha Rostami, Masoud Golkani
+**Member(s):** Sara Rostami, Masoud Golkani
 
 **[codes and more information ( not Available)](#)**
