--- a/_publications/2022-03-04-cfis1.md
+++ b/_publications/2022-03-04-cfis1.md
@@ -8,7 +8,7 @@ We propose a method that employs a heuristic function to create an artificial vi
 
 **Language(s):** Persian
 
-**Authors:** Taha Rostami, Saeed Jalili
+**Authors:** Sara Rostami, Saeed Jalili
 
 **Published in:** 9th Iranian Joint Congress on Fuzzy and Intelligent Systems
 
