--- a/_publications/2023-01-01-jp1.md
+++ b/_publications/2023-01-01-jp1.md
@@ -10,11 +10,11 @@ Mutation testing is a powerful method used in software testing for various activ
 
 **Language(s):** English
 
-**Authors:** Taha Rostami, Saeed Jalili
+**Authors:** Sara Rostami, Saeed Jalili
 
 **Published in:** Prepared, not submitted yet
 
-[**URL**](https://github.com/TahaRostami/predicting-fault-revealing-mutants-by-estimating-the-difficulty-of-killing-them)
+[**URL**](https://github.com/SaraRostami/predicting-fault-revealing-mutants-by-estimating-the-difficulty-of-killing-them)
 
 **Keywords:** <span class="w3-tag w3-round w3-center">Software testing</span> <span class="w3-tag w3-round w3-center">Mutation testing</span> <span class="w3-tag w3-round w3-center">Predicting fault-revealing mutants</span> <span class="w3-tag w3-round w3-center">Machine learning</span>
 
